# sela

./: .gitignore  README.md  pyproject.toml  tox.ini
src/sela/: main.py
src/sela/agents/: main_agent.py
src/sela/data/: schemas.py
src/sela/nodes/: casual_talker.py  memory_saver.py  mode_selector.py
src/sela/prompts/casual_talker/: human.txt  system.txt
src/sela/prompts/memory_saver/: human.txt  system.txt
src/sela/prompts/mode_selector/: human.txt  system.txt
src/sela/rags/: long_term_memory.py
src/sela/utils/: conf.py  datetime_manager.py  prompt_manager.py
src/streamlit/: main.py
src/tools/: clean_long_term_memory.py
src/webui/: main.py
