[project]
name = "sela"
version = "0.1.0"
description = ""
authors = [
    {name = "komot",email = "komotaymkty@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "langchain-core (>=0.3.62,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "langgraph-checkpoint-sqlite (>=2.0.10,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "sela", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
